# rscc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ast.txt  cspell.json  output.txt  result.txt
.github/workflows/: rust_ci.yaml
common/examples/: single_num.rs
sim/: Cargo.toml
sim/src/: lib.rs  test1.rs  test2.rs
test_examples/src/: add.rs  lib.rs
verilog_hdl/: Cargo.toml
verilog_hdl/results/: Makefile  add.v  add_ans.v  sample1.v  sample2.v
verilog_hdl/src/: generate_main.rs  lib.rs  parse.md
verilog_hdl/src/parser/: mod.rs  parse_block.rs  parse_fn.rs
verilog_hdl/src/parser/block/: mod.rs  parse_expr.rs  parse_local.rs
