[package]
name = "verilog_hdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# proc-macro = true

[dependencies]
syn = { version = "2.0.64", features = ["extra-traits", "full", "parsing"] }
common = { path = "../common" }
colored = "2.1.0"
derive-new = "0.6.0"
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
pretty_assertions = "1.4"
